--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ ul, ol {
         margin-top: 0;
         margin-bottom: 0;
         padding-left: 0;
+        list-style: none;
     }
     
 img {
@@ -58,6 +59,7 @@ img {
         padding: 0 15px;
     }
 }
+
 
 .visually-hidden {
 	position: absolute;
@@ -102,8 +104,6 @@ img {
         display: inline-block;
         }
     
-    
-    
     .extra-contacts {
         transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -132,7 +132,6 @@ img {
     line-height: 1,5; 
     letter-spacing: 0.02em;
 }
-
 
 .menu-link {font-weight: 500;
     line-height: 1.5;
@@ -256,6 +255,36 @@ line-height: 0;
     pointer-events: auto;
 }
 
+.nav-mobile-menu {font-size: 36px;
+    font-family: Roboto;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.menu-link-mobile:hover {
+    color: var(--ocean, #404BBF);
+}
+.menu-link-mobile:focus {
+    color: var(--ocean, #404BBF);
+} 
+
+.telephone-in-mob-menu {
+    margin-top: 284px;
+}
+
+.e-mail-in-mob-menu {
+    color: var(--slate, #434455);
+    font-size: 20px;
+    font-family: Roboto;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    margin-top: 40px;
+}
+
+
 
 @media screen and (min-width: 768px){
     .logo-link-unik {
@@ -349,6 +378,19 @@ line-height: 0;
 .button-background:hover {background-color: #404BBF;}
 .button-background:focus {background-color: #404BBF;}
 
+.social-media-mobile-element {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+}
+
+
+.social-media-mobile {
+    margin-top: 48px;
+    padding-bottom: 40px;
+    display: flex;
+    gap: 56px;
+}
 @media screen and (min-width:768px){
     .hero {background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero/hero-tab-1x.jpg);
