--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,6 @@ line-height: 0;
     flex-shrink: 0;
 }
 
-
 .social-media-mobile {
     margin-top: 48px;
     padding-bottom: 40px;
@@ -391,7 +390,6 @@ line-height: 0;
 @media screen and (min-width:768px){
     .hero {background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero/hero-tab-1x.jpg);
-
     }
     .hero-title {
         font-size: 56px;
@@ -428,11 +426,17 @@ line-height: 0;
 }
 
 
+.container-for-icons {display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;}
+
 @media screen and (max-width: 1158px){
-    .container-for-icons {
-        visibility: hidden;}
+.container-for-icons {display: none;}
 }
- 
 
 .button-text {color: white;
     font-weight: 500;
@@ -453,24 +457,65 @@ line-height: 0;
         margin-bottom: 72px; 
 }
 
+
 @media screen and (max-width:768px){
-    .feature-list {flex-direction: column;}
+    .feature-list {
+        flex-direction: column;
+    }  
 }
-
-
-@media screen (min-width: 428px){
-    .list {
-        text-align: center;
-        }
-}
-    
 
 .features-heading {font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: var(--light-color);
+        margin-bottom: 8px;
 }
+
+@media screen and (max-width: 767px) {
+    .features-heading {
+        text-align: center;
+    }
+}
+
+
+    /* На планшетах и десктопах */
+
+@media screen and (min-width: 768px){
+    .first-element-spiska {
+        width: calc((100% - 72px) / 4);}
+}
+
+    /* Только на десктопах */
+.features {
+        padding: 120px 0;
+    }
+
+
+    /* На мобильных и планшетах */
+@media screen and (max-width: 1158px){
+    .features {
+        padding-top: 96px;}
+    .features-heading {
+        font-size: 36px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;}
+    }
+
+.feature-list {
+    display: flex;
+    gap: 24px;
+    }
+    
+    /* Только на планшетах */
+@media screen and (min-width: 768px) and (max-width: 1157px){
+    .feature-list {
+        flex-wrap: wrap;}
+        }
 
 .text {line-height: 1.5;
     letter-spacing: 0.02em;
@@ -528,6 +573,7 @@ line-height: 0;
 
              /* END OF FIRST PART PORTFOLIO*/
 
+             
 .portfolio-header {border-bottom: 1px solid #E7E9FC;
 }
 
@@ -548,6 +594,7 @@ gap: 40px;}
 .logo-link {gap: 40px;
              }
 
+             
 .posulanya-unik {padding: 24px 0;}
 
 .portfolio-second-menu {padding: 96px 0 120px;
@@ -581,26 +628,14 @@ gap: 40px;}
     border-top: none;
     position: relative;
     overflow: hidden;}
-
-
-
-.features {padding: 120px 0;}
-
-
-
-.feature-list {display: flex;
-                gap: 24px;}
-            
+        
 .section {padding-top: 120px;
         }
-
-.first-element-spiska {width: calc((100% - 72px) / 4);}
 
 .images {display: flex;
     gap: 24px;
 }
 
-.features-heading {margin-bottom: 8px;}
 
 .third-section {padding-bottom: 120px;
 }
@@ -629,14 +664,6 @@ gap: 40px;}
                      /* 4 MODUL */
 
 .borders {box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);}
-
-.container-for-icons {display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    margin-bottom: 8px;}
 
 .social-media {display: flex;
     justify-content: center;
@@ -671,6 +698,7 @@ gap: 40px;}
 .spisok-brands {display: flex;
     gap: 24px;
 }
+
 
 .logo-brand {width: calc((100% - 120px) / 6);
     height: 88px;}
@@ -884,6 +912,7 @@ gap: 40px;}
 .knopka-svg {margin-left: 16px;}
 
 .div-v-konce-footer {margin-left:auto;}
+
 
 /*проверка модального окна*/
 
