--- a/css/styles.css
+++ b/css/styles.css
@@ -445,7 +445,8 @@ line-height: 0;
     line-height: 1.5;
     display: flex;
     align-items: center;
-    letter-spacing: 0.04em;}
+    letter-spacing: 0.04em;
+    padding-top: 120px;}
 
 .zagolovok {
         font-family: 'Roboto';
@@ -459,7 +460,7 @@ line-height: 0;
         margin-bottom: 72px; 
 }
 
-
+           /* На мобильном */
 @media screen and (max-width:768px){
     .feature-list {
         flex-direction: column;
@@ -472,6 +473,7 @@ line-height: 0;
         letter-spacing: 0.02em;
         color: var(--light-color);
         margin-bottom: 8px;
+        white-space: nowrap;
 }
 
 @media screen and (max-width: 767px) {
@@ -480,7 +482,9 @@ line-height: 0;
     }
 }
 
-    /* На планшетах и десктопах */
+
+
+        /* На планшетах и десктопах */
 
 @media screen and (min-width: 768px){
     .first-element-spiska {
@@ -492,65 +496,52 @@ line-height: 0;
         padding: 120px 0;
     }
 
-    /* На мобильных и планшетах */
+        /* На мобильных и планшетах */
 @media screen and (max-width: 1158px){
     .features {
         padding-top: 96px;}
     .features-heading {
-        font-size: 36px;
         font-family: Roboto;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 500;
         line-height: 40px;
         letter-spacing: 0.72px;
-        text-transform: capitalize;}
+        text-transform: capitalize;
+        margin-bottom: 8px;}
     .feature-list {
         padding-left: 16px;}
     }
 
-    /* третья секция */
-.third-section {display: none;}
-
-
-@media screen and (max-width: 1158px){
-    .images-main-telephone-ipad {
-        flex-direction: row;
-        flex-wrap: wrap;}
+        /* третья секция Только на Десктопах*/
+@media screen and (max-width:1158px) {
+    .third-section {
+        display: none;
     }
+}
 
 
-
-     /* иконки на планшет?  */
-/* @media screen and (max-width: 768px){
-    .images-main-telephone-ipad {
-     display: flex;
-     flex-direction: row;
-     flex-wrap: wrap;
-     justify-content: center;
-     align-items: center;
-     gap: 0;
-     row-gap: 64px;}
-} */
-
-/* @media screen and (max-width: 768px){
-.social-media-element {
-    width: calc((100% - 24px) / 2);}
-} */
-
-
-/* 
 @media screen and (max-width:768px){
-    .feature-list {
+    .images {
         flex-direction: column;
+        gap: 72px;
+        align-items: c;
     }
-} */
+}
     
+@media screen and (min-width: 768px) and (max-width: 1157.99px){
+.images {
+    flex-wrap: wrap;
+    row-gap: 64px;
+    column-gap: 24px;
+    justify-content: center;}
+}
+
 .feature-list {
     display: flex;
     gap: 24px;
     }
     
-    /* Только на планшетах */
+              /* Только на планшетах */
 @media screen and (min-width: 768px) and (max-width: 1157px){
     .feature-list {
         flex-direction: row;
@@ -707,16 +698,22 @@ line-height: 0;
 
 .first-foto {width: calc((100% - 48px) / 3);}
 
-.worker {
-    width: calc((100% - 72px) / 4);
-    background-color: white;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);}
+.worker {background-color: white;
+        border-radius: 0px 0px 4px 4px;
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        width: 264px;
+    }
+
+@media screen and (){
+    .worker {
+        width: calc((100% - 72px) / 4);}    
+}
 
 
-
-.worker-posada {padding: 32px 16px;
-                text-align: center;}
+.worker-posada {
+        padding: 32px 16px;
+        text-align: center;
+            }
 
 .footer {padding: 100px 0;
         }
@@ -728,8 +725,6 @@ line-height: 0;
     width: 264px;
     height: 72px;
 }
-
-                     /* 4 MODUL */
 
 .borders {box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);}
 
@@ -754,7 +749,8 @@ line-height: 0;
 
 .social-media-icon {fill: var(--buton-background-color);}
 
-                     /* 5 section */
+                     /* 5 section BRAND LOGOS*/
+
 .brand-logos {padding-top: 120px;
             padding-bottom: 120px;}
 
@@ -764,13 +760,40 @@ line-height: 0;
                     margin-bottom: 72px;
                     text-align: center;}
 
-.spisok-brands {display: flex;
+           /* на деск топах */
+@media screen and (min-width:1158px){
+.spisok-brands {
+    display: flex;
     gap: 24px;
+    }
+}
+
+           /* на мобильных */
+@media screen and (max-width:768px){   
+        .spisok-brands {
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 16px;
+            row-gap: 72px;
+            justify-content: center;
+        }
+}
+
+            /* на планшетах */
+@media screen and (min-width: 768px) and (max-width: 1157px){
+    .spisok-brands {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+        justify-content: center;
+    }
 }
 
 
 .logo-brand {width: calc((100% - 120px) / 6);
-    height: 88px;}
+    height: 88px;
+    width: 168px;}
 
 .link-logos-brands {width: 100%;
     height: 100%;
