--- a/css/styles.css
+++ b/css/styles.css
@@ -875,6 +875,7 @@ text-align: center;
 }
 }
 
+                /* только на планшет  */
 @media screen and (min-width: 768px) and (max-width: 1157px){
     .div-footer-extra {
         flex-wrap: wrap;
@@ -883,6 +884,7 @@ text-align: center;
         width: 556px; 
     }
 }
+
 
 @media screen and (min-width:1158px){
     .social-media-footer {
