--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ line-height: 0;
     }
     .features-heading {
         font-style: normal;
-        font-size: 20px;
+        font-size: 36px;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.72px;
@@ -543,6 +543,17 @@ line-height: 0;
         text-align: center;
     }
 }
+
+.names {        
+    font-style: normal;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    margin-bottom: 8px;
+    color: var(--light-color);
+    white-space: nowrap;}
 
         /* третья секция Только на Десктопах*/
 @media screen and (max-width:1158px) {
@@ -582,7 +593,9 @@ line-height: 0;
 @media screen and (min-width: 768px) and (max-width: 1157px){
     .feature-list {
         flex-direction: row;
-        flex-wrap: wrap;}
+        flex-wrap: wrap;
+        row-gap: 72px;
+    column-gap: 24px;}
     .first-element-spiska {
         width: calc((100% - 24px) / 2);} 
     }
@@ -860,9 +873,17 @@ text-align: center;
 }
 
 
-.logo-brand {width: calc((100% - 120px) / 6);
+.logo-brand {
+    width: calc((100% - 120px) / 6);
     height: 88px;
-    width: 190px;}
+    width: 190px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px){
+    .logo-brand {
+        width: 168px;
+    }
+}
 
 .link-logos-brands {width: 100%;
     height: 100%;
@@ -914,8 +935,7 @@ text-align: center;
 
 @media screen and (min-width:1158px){
     .social-media-footer {
-        padding-right: 120px;
-        margin-right: 24px;
+        margin-right: 120px;
     }
     
 }
