--- a/css/styles.css
+++ b/css/styles.css
@@ -423,8 +423,10 @@ line-height: 0;
     display: flex;
     gap: 56px;
 }
+
 @media screen and (min-width:768px){
-    .hero {background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    .hero {
+        background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/hero/hero-tab-1x.jpg);
     }
     .hero-title {
