--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ line-height: 0;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    overflow: auto;
 }
 
 .mobile-btn-close-menu {
@@ -304,6 +305,7 @@ line-height: 0;
 
 .telephone-in-mob-menu {
     margin-top: 284px;
+    color: var(--iris, #4D5AE5);
 }
 
 .e-mail-in-mob-menu {
@@ -520,6 +522,7 @@ line-height: 0;
 
 .features-heading {
     font-family: Roboto;
+    font-weight: 500;
 }
 
         /* На мобильных и планшетах */
@@ -805,8 +808,8 @@ text-align: center;
 
 @media screen and (max-width:768px) {
         .text-footer{
-            margin-left: 80px;
-            margin-right: 80px;
+margin-left: auto;
+margin-right: auto;
         }
     }
     
@@ -1113,7 +1116,7 @@ text-align: center;
 
 @media screen and (max-width: 767px){
     .subscribe-form-email {
-        width: 428px;
+        width: 100%;
         height: 40px;
         flex-shrink: 0;
     }
@@ -1149,6 +1152,7 @@ text-align: center;
 @media screen and (max-width: 768px) {
     .forma {
         flex-direction: column;
+        width:100%;
     }
 }
 
@@ -1177,6 +1181,8 @@ text-align: center;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+        width:100%;
     }
 }
 
